tests/errors/expression_not_supported_in_fixpoint.c
/*@
fixpoint bool error() {
    return
        1 == 1
        &*& //~ allow_should_fail
        2 == 2;
}
@*/
